SchemaRecord finished. But Metadata can't access schema.