@@ -12,6 +12,7 @@ import edu.kit.datamanager.metastore2.configuration.MetastoreConfiguration;
 import edu.kit.datamanager.metastore2.dao.ILinkedMetadataRecordDao;
 import edu.kit.datamanager.metastore2.dao.IMetadataSchemaDao;
 import edu.kit.datamanager.metastore2.domain.MetadataSchemaRecord;
+import edu.kit.datamanager.metastore2.util.MetadataSchemaRecordUtil;
 import edu.kit.datamanager.repo.dao.IContentInformationDao;
 import edu.kit.datamanager.repo.dao.IDataResourceDao;
 import edu.kit.datamanager.repo.domain.ContentInformation;
@@ -35,6 +36,7 @@ import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.Comparator;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import java.util.stream.Stream;
 import org.javers.core.Javers;
@@ -102,7 +104,8 @@ public class SchemaRegistryControllerTest {
 
   private final static String TEMP_DIR_4_ALL = "/tmp/metastore2/schematest/";
   private final static String TEMP_DIR_4_SCHEMAS = TEMP_DIR_4_ALL + "schema/";
-  private static final String INVALID_SCHEMA = "invalid_dc";
+  private static final String SCHEMA_ID = "dc";
+  private static final String INVALID_SCHEMA = "invalid/my_dc";
   private final static String DC_SCHEMA = "<schema targetNamespace=\"http://www.openarchives.org/OAI/2.0/oai_dc/\"\n"
           + "        xmlns:oai_dc=\"http://www.openarchives.org/OAI/2.0/oai_dc/\"\n"
           + "        xmlns:dc=\"http://purl.org/dc/elements/1.1/\"\n"
@@ -154,24 +157,24 @@ public class SchemaRegistryControllerTest {
           + "  <dc:type>dataset</dc:type>\n"
           + "</oai_dc:dc>";
   private final static String INVALID_DC_DOCUMENT = "<?xml version='1.0' encoding='utf-8'?>\n"
-            + "<oai_dc:dc xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:oai_dc=\"http://www.openarchives.org/OAI/2.0/oai_dc/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/oai_dc/ http://www.openarchives.org/OAI/2.0/oai_dc.xsd\">\n"
-            + "  <dc:creator>Carbon, Seth</dc:creator>\n"
-            + "  <dc:date>2018-07-02</dc:date>\n"
-            + "  <dc:description>Archival bundle of GO data release.</dc:description>\n"
-            + "  <dc:identifier>https://zenodo.org/record/3477535</dc:identifier>\n" //bad namespace
-            + "  <dc:id>oai:zenodo.org:3477535</dc:id>\n" //invalid field
-            + "  <dc:relation>doi:10.5281/zenodo.1205166</dc:relation>\n"
-            + "  <dc:rights>info:eu-repo/semantics/openAccess</dc:rights>\n"
-            + "  <dc:title>Gene Ontology Data Archive</dc:title>\n"
-            + "  <dc:type>dataset</dc:type>\n"
-            + "</oai_dc:dc>";
+          + "<oai_dc:dc xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:oai_dc=\"http://www.openarchives.org/OAI/2.0/oai_dc/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/oai_dc/ http://www.openarchives.org/OAI/2.0/oai_dc.xsd\">\n"
+          + "  <dc:creator>Carbon, Seth</dc:creator>\n"
+          + "  <dc:date>2018-07-02</dc:date>\n"
+          + "  <dc:description>Archival bundle of GO data release.</dc:description>\n"
+          + "  <dc:identifier>https://zenodo.org/record/3477535</dc:identifier>\n" //bad namespace
+          + "  <dc:id>oai:zenodo.org:3477535</dc:id>\n" //invalid field
+          + "  <dc:relation>doi:10.5281/zenodo.1205166</dc:relation>\n"
+          + "  <dc:rights>info:eu-repo/semantics/openAccess</dc:rights>\n"
+          + "  <dc:title>Gene Ontology Data Archive</dc:title>\n"
+          + "  <dc:type>dataset</dc:type>\n"
+          + "</oai_dc:dc>";
+  private final static String JSON_DOCUMENT = "{\"title\":\"any string\",\"date\": \"2020-10-16\"}";
 
   private String adminToken;
   private String userToken;
   private String otherUserToken;
   private String guestToken;
 
-  
   private MockMvc mockMvc;
   @Autowired
   private WebApplicationContext context;
@@ -182,7 +185,7 @@ public class SchemaRegistryControllerTest {
   @Autowired
   private IAuditService<MetadataSchemaRecord> schemaAuditService;
 
- @Autowired
+  @Autowired
   private ApplicationProperties applicationProperties;
   @Autowired
   private ILinkedMetadataRecordDao metadataRecordDao;
@@ -196,11 +199,10 @@ public class SchemaRegistryControllerTest {
   @Autowired
   private IContentInformationDao contentInformationDao;
   @Autowired
-  private IContentInformationService contentInformationService;
+  private IContentInformationService schemaInformationService;
   @Autowired
   private ApplicationEventPublisher eventPublisher;
 
-  private IAuditService<ContentInformation> contentInformationAuditService;
   @Autowired
   private MetastoreConfiguration metastoreProperties;
   @Rule
@@ -219,7 +221,7 @@ public class SchemaRegistryControllerTest {
     rbc.setBasepath(applicationProperties.getSchemaFolder());
     rbc.setReadOnly(false);
     rbc.setDataResourceService(this.schemaResourceService);
-    rbc.setContentInformationService(this.contentInformationService);
+    rbc.setContentInformationService(this.schemaInformationService);
     rbc.setEventPublisher(eventPublisher);
     for (IRepoVersioningService versioningService : versioningServices) {
       if ("simple".equals(versioningService.getServiceName())) {
@@ -275,103 +277,104 @@ public class SchemaRegistryControllerTest {
             .build();
   }
 
-    @Test
-    public void testCreateSchemaRecord() throws Exception {
-      MetadataSchemaRecord record = new MetadataSchemaRecord();
-      record.setSchemaId("my_dc");
-      record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
-      record.setMimeType(MediaType.APPLICATION_XML.toString());
-      Set<AclEntry> aclEntries = new HashSet<>();
-      aclEntries.add(new AclEntry("test", PERMISSION.READ));
-      aclEntries.add(new AclEntry("SELF", PERMISSION.ADMINISTRATE));
-      record.setAcl(aclEntries);
-      ObjectMapper mapper = new ObjectMapper();
+  @Test
+  public void testCreateSchemaRecord() throws Exception {
+    MetadataSchemaRecord record = new MetadataSchemaRecord();
+    record.setSchemaId("my_dc");
+    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+    record.setMimeType(MediaType.APPLICATION_XML.toString());
+    Set<AclEntry> aclEntries = new HashSet<>();
+    aclEntries.add(new AclEntry("test", PERMISSION.READ));
+    aclEntries.add(new AclEntry("SELF", PERMISSION.ADMINISTRATE));
+    record.setAcl(aclEntries);
+    ObjectMapper mapper = new ObjectMapper();
 
-      MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-      MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
-      this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
-              file(recordFile).
-              file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andReturn();
-    }
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andReturn();
+  }
 
-    @Test
-    public void testCreateSchemaRecordWithLocationUri() throws Exception {
-      MetadataSchemaRecord record = new MetadataSchemaRecord();
-      record.setSchemaId("my_dc_new");
-      record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
-      record.setMimeType(MediaType.APPLICATION_XML.toString());
-      Set<AclEntry> aclEntries = new HashSet<>();
-      aclEntries.add(new AclEntry("test", PERMISSION.READ));
-      aclEntries.add(new AclEntry("SELF", PERMISSION.ADMINISTRATE));
-      record.setAcl(aclEntries);
-      ObjectMapper mapper = new ObjectMapper();
+  @Test
+  public void testCreateSchemaRecordWithLocationUri() throws Exception {
+    MetadataSchemaRecord record = new MetadataSchemaRecord();
+    record.setSchemaId("my_dc_new");
+    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+    record.setMimeType(MediaType.APPLICATION_XML.toString());
+    Set<AclEntry> aclEntries = new HashSet<>();
+    aclEntries.add(new AclEntry("test", PERMISSION.READ));
+    aclEntries.add(new AclEntry("SELF", PERMISSION.ADMINISTRATE));
+    record.setAcl(aclEntries);
+    ObjectMapper mapper = new ObjectMapper();
 
-      MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-      MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
-      MvcResult result = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
-              file(recordFile).
-              file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andExpect(redirectedUrlPattern("http://*:*/**/" + record.getSchemaId() + "?version=1")).andReturn();
-      String locationUri = result.getResponse().getHeader("Location");
-      String content = result.getResponse().getContentAsString();
+    MvcResult result = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andExpect(redirectedUrlPattern("http://*:*/**/" + record.getSchemaId() + "?version=1")).andReturn();
+    String locationUri = result.getResponse().getHeader("Location");
+    String content = result.getResponse().getContentAsString();
 
-      MvcResult result2 = this.mockMvc.perform(get(locationUri).header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
-      String content2 = result2.getResponse().getContentAsString();
+    MvcResult result2 = this.mockMvc.perform(get(locationUri).header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
+    String content2 = result2.getResponse().getContentAsString();
 
-      Assert.assertEquals(content, content2);
-    }
+    Assert.assertEquals(content, content2);
+  }
 
-    @Test
-    public void testCreateInvalidSchemaRecord() throws Exception {
-      MetadataSchemaRecord record = new MetadataSchemaRecord();
-      record.setSchemaId(INVALID_SCHEMA);
-      record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
-      record.setMimeType(MediaType.APPLICATION_XML.toString());
-      ObjectMapper mapper = new ObjectMapper();
+  @Test
+  public void testCreateInvalidSchemaRecord() throws Exception {
+    MetadataSchemaRecord record = new MetadataSchemaRecord();
+    record.setSchemaId(INVALID_SCHEMA);
+    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+    record.setMimeType(MediaType.APPLICATION_XML.toString());
+    ObjectMapper mapper = new ObjectMapper();
 
-      MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-      MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
-      this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
-              file(recordFile).
-              file(schemaFile)).andDo(print()).andExpect(status().isInternalServerError()).andReturn();
-    }
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
+  }
 
-    @Test
-    public void testCreateInvalidMetadataSchemaRecord() throws Exception {
-      String wrongTypeJson = "{\"schemaId\":\"dc\",\"type\":\"Something totally strange!\"}";
+  @Test
+  public void testCreateInvalidMetadataSchemaRecord() throws Exception {
+    String wrongTypeJson = "{\"schemaId\":\"dc\",\"type\":\"Something totally strange!\"}";
 
-      MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", wrongTypeJson.getBytes());
-      MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", wrongTypeJson.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
-      this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
-              file(recordFile).
-              file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
-      String wrongFormatJson = "<metadata><schemaId>dc</schemaId><type>XML</type></metadata>";
-      recordFile = new MockMultipartFile("record", "record.json", "application/json", wrongFormatJson.getBytes());
-      this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
-              file(recordFile).
-              file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
-      
-    }
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
+    String wrongFormatJson = "<metadata><schemaId>dc</schemaId><type>XML</type></metadata>";
+    recordFile = new MockMultipartFile("record", "record.json", "application/json", wrongFormatJson.getBytes());
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
 
-    @Test
-    public void testCreateEmptyMetadataSchemaRecord() throws Exception {
+  }
 
-      MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", (byte[])null);
-      MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+  @Test
+  public void testCreateEmptyMetadataSchemaRecord() throws Exception {
 
-      this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
-              file(recordFile).
-              file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
-      
-      recordFile = new MockMultipartFile("record", "record.json", "application/json", " ".getBytes());
-      this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
-              file(recordFile).
-              file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
-    }
-    // @Test 
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", (byte[]) null);
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
+
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
+
+    recordFile = new MockMultipartFile("record", "record.json", "application/json", " ".getBytes());
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
+  }
+  // @Test 
+
   public void testCreateSchemaRecordFromExternal() throws Exception {
     MetadataSchemaRecord record = new MetadataSchemaRecord();
     record.setSchemaId("my_dc");
@@ -380,7 +383,7 @@ public class SchemaRegistryControllerTest {
     ObjectMapper mapper = new ObjectMapper();
 
     MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-    MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
     RequestPostProcessor rpp = new RequestPostProcessor() {
       @Override
       public MockHttpServletRequest postProcessRequest(MockHttpServletRequest mhsr) {
@@ -402,7 +405,7 @@ public class SchemaRegistryControllerTest {
     ObjectMapper mapper = new ObjectMapper();
 
     MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-    MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
             file(schemaFile).with(remoteAddr("any.domain.com"))).andDo(print()).andExpect(status().isCreated()).andReturn();
@@ -420,7 +423,7 @@ public class SchemaRegistryControllerTest {
     ObjectMapper mapper = new ObjectMapper();
 
     MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-    MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
     MvcResult res = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
@@ -435,7 +438,7 @@ public class SchemaRegistryControllerTest {
     ObjectMapper mapper = new ObjectMapper();
 
     MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-    MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
     MvcResult res = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
@@ -494,7 +497,7 @@ public class SchemaRegistryControllerTest {
 
   @Test
   public void testCreateSchemaRecordWithoutRecord() throws Exception {
-    MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
   }
@@ -522,7 +525,7 @@ public class SchemaRegistryControllerTest {
     record.setMimeType(MediaType.APPLICATION_XML.toString());
 
     MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-    MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
@@ -538,7 +541,7 @@ public class SchemaRegistryControllerTest {
     ObjectMapper mapper = new ObjectMapper();
 
     MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-    MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
     MvcResult res = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
@@ -546,13 +549,10 @@ public class SchemaRegistryControllerTest {
 
     MetadataSchemaRecord result = mapper.readValue(res.getResponse().getContentAsString(), MetadataSchemaRecord.class);
     Assert.assertEquals(result.getSchemaVersion(), Long.valueOf(1l));
-
+    // Can't create same resource twice -> Conflict
     res = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
-            file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andReturn();
-
-    result = mapper.readValue(res.getResponse().getContentAsString(), MetadataSchemaRecord.class);
-    Assert.assertEquals(result.getSchemaVersion(), Long.valueOf(2l));
+            file(schemaFile)).andDo(print()).andExpect(status().isConflict()).andReturn();
   }
 
   @Test
@@ -646,9 +646,10 @@ public class SchemaRegistryControllerTest {
   @Test
   public void testGetSchemaDocumentWithMissingSchemaFile() throws Exception {
     createDcSchema();
-
+    String contentUri = contentInformationDao.findAll().get(0).getContentUri();
     //delete schema file
-    Files.delete(Paths.get("/tmp/dc.xsd"));
+    URI uri = new URI(contentUri);
+    Files.delete(Path.of(uri));
 
     this.mockMvc.perform(get("/api/v1/schemas/dc")).andDo(print()).andExpect(status().isInternalServerError()).andReturn();
   }
@@ -699,17 +700,16 @@ public class SchemaRegistryControllerTest {
   public void testValidateWithoutValidator() throws Exception {
     createDcSchema();
 
-    //modify DC schema so that it has no validator
-    MetadataSchemaRecord record = metadataSchemaDao.findById("dc").get();
-    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.JSON);
-    metadataSchemaDao.save(record);
-
-    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc/validate").file("document", DC_DOCUMENT.getBytes())).andDo(print()).andExpect(status().isUnprocessableEntity()).andReturn();
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc/validate").file("document", JSON_DOCUMENT.getBytes())).andDo(print()).andExpect(status().isUnprocessableEntity()).andReturn();
   }
 
   @Test
   public void testValidateWithMissingSchemaFile() throws Exception {
     createDcSchema();
+    String contentUri = contentInformationDao.findAll().get(0).getContentUri();
+    //delete schema file
+    URI uri = new URI(contentUri);
+    Files.delete(Path.of(uri));
 
     //delete schema file
     Files.delete(Paths.get("/tmp/dc.xsd"));
@@ -728,16 +728,19 @@ public class SchemaRegistryControllerTest {
     MetadataSchemaRecord record = mapper.readValue(body, MetadataSchemaRecord.class);
     String mimeTypeBefore = record.getMimeType();
     record.setMimeType(MediaType.APPLICATION_JSON.toString());
+    MockMultipartFile recordFile = new MockMultipartFile("record", "metadata-record.json", "application/json", mapper.writeValueAsString(record).getBytes());
 
-    result = this.mockMvc.perform(put("/api/v1/schemas/dc").header("If-Match", etag).contentType(MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE).content(mapper.writeValueAsString(record))).andDo(print()).andExpect(status().isOk()).andExpect(redirectedUrlPattern("http://*:*/**/" + record.getSchemaId() + "?version=1")).andReturn();
+    result = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc").
+            file(recordFile).header("If-Match", etag).with(putMultipart())).andDo(print()).andExpect(status().isOk()).andExpect(redirectedUrlPattern("http://*:*/**/" + record.getSchemaId() + "?version=??")).andReturn();
     body = result.getResponse().getContentAsString();
 
     MetadataSchemaRecord record2 = mapper.readValue(body, MetadataSchemaRecord.class);
     Assert.assertNotEquals(mimeTypeBefore, record2.getMimeType());//mime type was changed by update
     Assert.assertEquals(record.getCreatedAt(), record2.getCreatedAt());
-    Assert.assertEquals(record.getSchemaDocumentUri(), record2.getSchemaDocumentUri());
+    testForNextVersion(record.getSchemaDocumentUri(), record2.getSchemaDocumentUri());
+//    Assert.assertEquals(record.getSchemaDocumentUri().replace("version=1", "version=2"), record2.getSchemaDocumentUri());
     Assert.assertEquals(record.getSchemaId(), record2.getSchemaId());
-    Assert.assertEquals(record.getSchemaVersion(), record2.getSchemaVersion());//version is not changing for metadata update
+    Assert.assertEquals((long) record.getSchemaVersion() + 1l, (long) record2.getSchemaVersion());//version is not changing for metadata update
     if (record.getAcl() != null) {
       Assert.assertTrue(record.getAcl().containsAll(record2.getAcl()));
     }
@@ -758,7 +761,7 @@ public class SchemaRegistryControllerTest {
     ObjectMapper mapper = new ObjectMapper();
 
     MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-    MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
     MvcResult result = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
@@ -770,16 +773,18 @@ public class SchemaRegistryControllerTest {
     MetadataSchemaRecord record1 = mapper.readValue(body, MetadataSchemaRecord.class);
     String mimeTypeBefore = record1.getMimeType();
     record1.setMimeType(MediaType.APPLICATION_JSON.toString());
-
-    result = this.mockMvc.perform(put("/api/v1/schemas/dc").header("If-Match", etag).contentType(MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE).content(mapper.writeValueAsString(record1))).andDo(print()).andExpect(status().isOk()).andReturn();
+    recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record1).getBytes());
+    result = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc").
+            file(recordFile).header("If-Match", etag).with(putMultipart())).andDo(print()).andExpect(status().isOk()).andReturn();
     body = result.getResponse().getContentAsString();
 
     MetadataSchemaRecord record2 = mapper.readValue(body, MetadataSchemaRecord.class);
     Assert.assertNotEquals(mimeTypeBefore, record2.getMimeType());//mime type was changed by update
     Assert.assertEquals(record1.getCreatedAt(), record2.getCreatedAt());
-    Assert.assertEquals(record1.getSchemaDocumentUri(), record2.getSchemaDocumentUri());
+    testForNextVersion(record1.getSchemaDocumentUri(), record2.getSchemaDocumentUri());
+    //Assert.assertEquals(record1.getSchemaDocumentUri().replace("version=1", "version=2"), record2.getSchemaDocumentUri());
     Assert.assertEquals(record1.getSchemaId(), record2.getSchemaId());
-    Assert.assertEquals(record1.getSchemaVersion(), record2.getSchemaVersion());//version is not changing for metadata update
+    Assert.assertEquals((long) record1.getSchemaVersion() + 1l, (long) record2.getSchemaVersion());//version is not changing for metadata update
     if (record1.getAcl() != null) {
       Assert.assertTrue(record1.getAcl().containsAll(record2.getAcl()));
     }
@@ -793,9 +798,11 @@ public class SchemaRegistryControllerTest {
     String body = result.getResponse().getContentAsString();
     ObjectMapper mapper = new ObjectMapper();
     MetadataSchemaRecord record = mapper.readValue(body, MetadataSchemaRecord.class);
-
     record.setMimeType(MediaType.APPLICATION_JSON.toString());
-    this.mockMvc.perform(put("/api/v1/schemas/dc").contentType("application/json").contentType(MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE).content(mapper.writeValueAsString(record))).andDo(print()).andExpect(status().isPreconditionRequired()).andReturn();
+    MockMultipartFile recordFile = new MockMultipartFile("record", "metadata-record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc").
+            file(recordFile).with(putMultipart())).andDo(print()).andExpect(status().isPreconditionRequired()).andReturn();
   }
 
   @Test
@@ -806,7 +813,9 @@ public class SchemaRegistryControllerTest {
     String body = result.getResponse().getContentAsString();
     ObjectMapper mapper = new ObjectMapper();
     MetadataSchemaRecord record = mapper.readValue(body, MetadataSchemaRecord.class);
-    this.mockMvc.perform(put("/api/v1/schemas/dc").contentType("application/json").header("If-Match", etag).contentType(MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE).content(mapper.writeValueAsString(record))).andDo(print()).andExpect(status().isPreconditionFailed()).andReturn();
+    MockMultipartFile recordFile = new MockMultipartFile("record", "metadata-record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc").
+            file(recordFile).header("If-Match", etag).with(putMultipart())).andDo(print()).andExpect(status().isPreconditionFailed()).andReturn();
   }
 
   @Test
@@ -821,15 +830,6 @@ public class SchemaRegistryControllerTest {
   @Test
   public void testDeleteSchemaRecord() throws Exception {
     createDcSchema();
-
-    MvcResult result = this.mockMvc.perform(get("/api/v1/schemas/dc").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
-    String etag = result.getResponse().getHeader("ETag");
-
-    this.mockMvc.perform(delete("/api/v1/schemas/dc").header("If-Match", etag)).andDo(print()).andExpect(status().isNoContent()).andReturn();
-    //delete second time
-    this.mockMvc.perform(delete("/api/v1/schemas/dc")).andDo(print()).andExpect(status().isNoContent()).andReturn();
-
-    //try to create after deletion (Should return HTTP GONE)
     MetadataSchemaRecord record = new MetadataSchemaRecord();
     record.setSchemaId("dc");
     record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
@@ -837,29 +837,63 @@ public class SchemaRegistryControllerTest {
     ObjectMapper mapper = new ObjectMapper();
 
     MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
-    MockMultipartFile schemaFile = new MockMultipartFile("schema",  "schema.json", "application/json", DC_SCHEMA.getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/json", DC_SCHEMA.getBytes());
 
+    MvcResult result = this.mockMvc.perform(get("/api/v1/schemas/dc").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
+    String etag = result.getResponse().getHeader("ETag");
+
+    this.mockMvc.perform(delete("/api/v1/schemas/dc").header("If-Match", etag)).andDo(print()).andExpect(status().isNoContent()).andReturn();
+    // creae should return conflict
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isConflict()).andReturn();
+    //delete second time // should be really deleted -> gone
+    result = this.mockMvc.perform(get("/api/v1/schemas/dc").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
+    etag = result.getResponse().getHeader("ETag");
+    this.mockMvc.perform(delete("/api/v1/schemas/dc").header("If-Match", etag)).andDo(print()).andExpect(status().isNoContent()).andReturn();
+
+    //try to create after deletion (Should return HTTP GONE)
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
             file(schemaFile)).andDo(print()).andExpect(status().isGone()).andReturn();
   }
 
-  private void createDcSchema() throws FileNotFoundException, IOException {
+  private void ingestSchemaRecord() throws Exception {
     MetadataSchemaRecord record = new MetadataSchemaRecord();
-    record.setCreatedAt(Instant.now());
-    record.setLastUpdate(Instant.now());
-    record.setSchemaId("dc");
-    record.setSchemaVersion(1l);
-    record.setMimeType("application/xml");
+    record.setSchemaId(SCHEMA_ID);
     record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
-    Set<AclEntry> acl = new HashSet<>();
-    AclEntry entry = new AclEntry();
-    entry.setSid("SELF");
-    entry.setPermission(PERMISSION.WRITE);
-    acl.add(entry);
-    record.setAcl(acl);
-    record.setSchemaDocumentUri("file:///tmp/dc.xsd");
-    record = metadataSchemaDao.save(record);
+    record.setMimeType(MediaType.APPLICATION_XML.toString());
+    Set<AclEntry> aclEntries = new HashSet<>();
+    aclEntries.add(new AclEntry("test", PERMISSION.READ));
+    aclEntries.add(new AclEntry("SELF", PERMISSION.ADMINISTRATE));
+    record.setAcl(aclEntries);
+    ObjectMapper mapper = new ObjectMapper();
+
+    MockMultipartFile recordFile = new MockMultipartFile("record", "metadata-record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "schema.xsd", "application/xml", DC_SCHEMA.getBytes());
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andReturn();
+  }
+
+  private void createDcSchema() throws Exception {
+    ingestSchemaRecord();
+//    MetadataSchemaRecord record = new MetadataSchemaRecord();
+//    record.setCreatedAt(Instant.now());
+//    record.setLastUpdate(Instant.now());
+//    record.setSchemaId("dc");
+//    record.setSchemaVersion(1l);
+//    record.setMimeType("application/xml");
+//    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+//    Set<AclEntry> acl = new HashSet<>();
+//    AclEntry entry = new AclEntry();
+//    entry.setSid("SELF");
+//    entry.setPermission(PERMISSION.WRITE);
+//    acl.add(entry);
+//    record.setAcl(acl);
+//    record.setSchemaDocumentUri("file:///tmp/dc.xsd");
+//    record = metadataSchemaDao.save(record);
+
     File dcFile = new File("/tmp/dc.xsd");
     if (!dcFile.exists()) {
       try (FileOutputStream fout = new FileOutputStream(dcFile)) {
@@ -867,8 +901,8 @@ public class SchemaRegistryControllerTest {
         fout.flush();
       }
     }
-
-    schemaAuditService.captureAuditInformation(record, "TEST");
+//
+//    schemaAuditService.captureAuditInformation(record, "TEST");
   }
 
   private static RequestPostProcessor remoteAddr(final String remoteAddr) { // it's nice to extract into a helper
@@ -876,5 +910,20 @@ public class SchemaRegistryControllerTest {
       request.setRemoteAddr(remoteAddr);
       return request;
     };
+  }
+
+  private static RequestPostProcessor putMultipart() { // it's nice to extract into a helper
+    return (MockHttpServletRequest request) -> {
+      request.setMethod("PUT");
+      return request;
+    };
+  }
+
+  private void testForNextVersion(String first, String second) {
+    int index = first.lastIndexOf("=");
+    int firstVersion = Integer.parseInt(first.substring(index + 1));
+    int secondVersion = Integer.parseInt(second.substring(index + 1));
+    Assert.assertEquals(firstVersion + 1, secondVersion);
+    Assert.assertEquals(first.substring(0, index), second.substring(0, index));
   }
 }
